--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
                 <td>給付型または貸与型</td>
                 <td><a href="http://www.meiko-zaidan.jp/program/resultdetail/id/13" target="_blank">条件について</a></td>
                 <td>書類審査<br>面接</td>
-                <td>第11回給付奨学金<br>2023年11月28日(火) ～2024年1月18日(木) <br><br>
-                    第11回給付奨学金<br>2024年11月28日(木) ～2025年1月16日(木)</td>
+                <td>第11回給付奨学金<br>2024年11月28日(木) ～2025年1月16日(木)</td>
             </tr>
             <tr id="Bolsa">
                 <th>三井物産</th>
