--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <tr id="Bolsa">
                 <th>三井物産</th>
                 <td>給付型</td>
-                <td><a href="https://www.mitsui.com/jp/ja/sustainability/contribution/community/2025_Brazilian_Scholarship_outline.pdf" target="_blank">条件について</a></td>
+                <td><a href="https://www.mitsui.com/jp/ja/sustainability/contribution/community/2026_Brazilian_Scholarship_form.docx" target="_blank">条件について</a></td>
                 <td>書類審査<br>面接<br>日本語エッセイ</td>
                 <td>2024 年 9 月 1 日～2025 年 1 月 31 日</td>
             </tr>
