--- a/index.html
+++ b/index.html
@@ -95,29 +95,46 @@
         </table>
         <table>
             <tr id="Nome">
-                <th colspan="5">民間・財団奨学金</th>
+                <th colspan="6">民間・財団奨学金</th>
             </tr>
             <tr id="Informacao">
-                <th>奨学金</th>
+                <th colspan="2">奨学金</th>
                 <th>詳細</th>
                 <th>減免額</th>
                 <th>審査法</th>
                 <th>締め切り</th>
             </tr>
             <tr id="Bolsa">
-                <th><a href="http://www.meiko-zaidan.jp/" target="_blank">明光奨学金</a></th>
+                <th colspan="2"><a href="http://www.meiko-zaidan.jp/" target="_blank">明光奨学金</a></th>
                 <td>給付型または貸与型</td>
                 <td><a href="http://www.meiko-zaidan.jp/program/resultdetail/id/13" target="_blank">条件について</a></td>
                 <td>書類審査<br>面接</td>
-                <td>第11回給付奨学金<br>2024年11月28日(木) ～2025年1月16日(木)</td>
+                <td>第11回給付奨学金<br>2023年11月28日(火) ～2024年1月18日(木) <br><br>
+                    第11回給付奨学金<br>2024年11月28日(木) ～2025年1月16日(木)</td>
             </tr>
             <tr id="Bolsa">
-                <th>三井物産</th>
+                <th colspan="2">三井物産</th>
                 <td>給付型</td>
                 <td><a href="https://www.mitsui.com/jp/ja/sustainability/contribution/community/2026_Brazilian_Scholarship_form.docx" target="_blank">条件について</a></td>
                 <td>書類審査<br>面接<br>日本語エッセイ</td>
-                <td>2024 年 9 月 1 日～2025 年 1 月 31 日</td>
+                <td></td>
             </tr>
+            <tr id="Bolsa">
+                <th rowspan="2"><a href="https://www.keyence-foundation.or.jp/" target="_blank">キーエンス財団</a></th>
+                <th><a href="https://www.keyence-foundation.or.jp/scholarship01/" target="_blank">大学新1年生対象</a></th>
+                <td>700名 募集<br>新1年生対象</td>
+                <td>月額10万円<br>(返済不要)</td>
+                <td>学業成績<br>経済的な状況<br>小論文等</td>
+                <td>2026年2月2日～4月3日</td>
+            </tr>
+            <tr id="Bolsa">
+                <th><a href="https://www.keyence-foundation.or.jp/scholarship02/" target="_blank">大学在学生対象</a></th>
+                <td>1200名 募集<br>在学生対象</td>
+                <td>30万円<br>(返済不要)</td>
+                <td>文章（800字以内）<br>書類審査</td>
+                <td>2026年2月（予定）</td>
+            </tr>
+
         </table>
 
             <table>
@@ -176,6 +193,7 @@
                         <td></td>
                     </tr>
                 </table>
+            </table>
 </body>
 </html>
 <!-- section.Categoria>(span#Categoria-Titulo)+(table>((tr#Nome>th[colspan="5"]>a[target="_blank"])+(tr#Informacao>(th{奨学金}+th{詳細}+th{減免額}+th{審査法}+th{締め切り}))+(tr#Bolsa>th+td*4)*2)) -->
