--- a/index.html
+++ b/index.html
@@ -109,15 +109,14 @@
                 <td>給付型または貸与型</td>
                 <td><a href="http://www.meiko-zaidan.jp/program/resultdetail/id/13" target="_blank">条件について</a></td>
                 <td>書類審査<br>面接</td>
-                <td>第11回給付奨学金<br>2023年11月28日(火) ～2024年1月18日(木) <br><br>
-                    第11回給付奨学金<br>2024年11月28日(木) ～2025年1月16日(木)</td>
+                <td></td>
             </tr>
             <tr id="Bolsa">
-                <th colspan="2">三井物産</th>
+                <th colspan="2"><a href="https://www.mitsui.com/jp/ja/sustainability/contribution/community/2026_Brazilian_Scholarship_outline.pdf" target="_blank">三井物産</a></th>
                 <td>給付型</td>
                 <td><a href="https://www.mitsui.com/jp/ja/sustainability/contribution/community/2026_Brazilian_Scholarship_form.docx" target="_blank">条件について</a></td>
                 <td>書類審査<br>面接<br>日本語エッセイ</td>
-                <td></td>
+                <td>2025年9月1日<br>〜<br>2026年1月31日</td>
             </tr>
             <tr id="Bolsa">
                 <th rowspan="2"><a href="https://www.keyence-foundation.or.jp/" target="_blank">キーエンス財団</a></th>
