--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <td>対象資格の種別によって、減免額が変わる</td>
             <td>初年度の実習費から○○円</td>
             <td>書類審査のみ</td>
-            <td rowspan="4">2026年2月6日（金）<br>〜<br>2026年2月26日（木）</td>
+            <td rowspan="4"></td>
         </tr>
         <tr id="Bolsa">
             <th>経済支援奨学制度</th>
